@@ -1,5 +1,7 @@
 # version 0.65.1
 
+2022-03-01
+ - Restricts the field retrieval web-service to admin only.
 
 # version 0.65
 
